--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="title_item_list">Items</string>
     <string name="title_item_detail">Item Detail</string>
     <string name="title_activity_schedule">ScheduleActivity</string>
+    <string name="title_activity_shopping_list">ShoppingListActivity</string>
 </resources>
